# wifi-diag-schema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/wifi_diag_schema/: __init__.py  _justifications.py  enums.py  handshake.py  telemetry.py  verdict.py  version.py
tests/: conftest.py  test_anthropic_compat.py  test_bssid_modes.py  test_display_names.py  test_handshake.py  test_headline_max_length.py  test_json_schema_export.py  test_schema_backwards_compat.py  test_telemetry_extra_forbid.py  test_telemetry_field_allowlist.py  test_version.py
tests/fixtures/v1_1_0/: telemetry_frame.json  verdict.json
