[project]
name = "wifi-diag-schema"
version = "1.2.0"
description = "Wire-format Pydantic schema for AI Internet Diagnostic. The field allowlist is the privacy contract."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "WolfDavid", email = "mkarurosun@gmail.com" }]
keywords = ["wifi", "diagnostic", "pydantic", "schema", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13,<3.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/WolfDavid/wifi-diag-schema"
Repository = "https://github.com/WolfDavid/wifi-diag-schema"
Issues = "https://github.com/WolfDavid/wifi-diag-schema/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wifi_diag_schema"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
